[tool.poetry]
name = "configparseradv"
version = "0.1.0"
description = "Configuration parser with extended capabilities"
authors = ["Fernando Olguin <f.olguin.ch@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
astropy = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
