[tool.poetry]
name = "configparseradv"
version = "0.1.1"
description = "Configuration parser with extended capabilities"
authors = ["Fernando Olguin <f.olguin.ch@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.26.3"
astropy = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
